--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -6,14 +6,18 @@
     justify-content: space-between;
     align-items: center;
     background-color: rgb(128, 91, 130);
+    
+    .nav-links-container {    
+        background-color: coral;
+        width: 200px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .nav-link {
+        font-weight: 600 ;
+    }      
 }
 
-.nav-links-container {
-    width: 120px;
-    display: flex;
-    justify-content: space-around;
-}
-  
-.nav-link {
-    font-weight: 600 ;
-}
+
