--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -1,6 +1,6 @@
 .button-container {
-    min-width: 150px;
-    width: auto;
+    
+    width: 100%;
     height: 50px;
     padding: 0 35px 0 35px;
     background-color: white;
