--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -6,19 +6,23 @@
   padding: 15px 0;
   font-size: 20px;
   align-items: center;
+  background-color: rgb(81, 107, 96);
 
   .checkout-image {
-    width: 18%;
-    padding-right: 15px;
+    width: 23%;
+  
 
     img {
       width: 100%;
       height: 100%;
+      padding: 30px 40px 30px 30px;
     }
   }
   .name,
   .quantity,
   .price {
+    font-size: 14px;
+    font-weight: 200;
     width: 23%;
   }
 
