--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   margin: 50px auto 0;
+  background-color: rgb(78, 97, 113);
 
   .checkout-header {
     width: 100%;
@@ -12,13 +13,14 @@
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid darkgrey;
+    background-color: rgb(43, 116, 120);
 
     .header-block {
       text-transform: capitalize;
-      width: 23%;
+      width: 10%;
 
       &:last-child {
-        width: 8%;
+        padding-right: 20px;
       }
     }
   }
