--- a/src/components/sign-in-form/sign-in-form.styles.scss
+++ b/src/components/sign-in-form/sign-in-form.styles.scss
@@ -1,11 +1,12 @@
 .sign-in-form-container {
     width: 400px;
     height: 480px;
-    background-color: rgb(20, 123, 123);
+    background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
+    border: 1px solid black;
 
    
     .sign-in-form {
