--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  background-color: #f1f5f9;
+  background-color: white;
   font-family: 'Oxygen', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
